--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Sean Dalton"
 title_separator          : "-"
 name                     : &name "Dalton"
-description              : &description "Graduate student"
+description              : &description "Ph.D. student, Mechanical Engineering, Stanford University"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
