--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Sean Dalton"
   avatar           : "profile.png"
-  bio              : "Graduate student in mechanical engineering"
+  bio              : "Ph.D. student, Mechanical Engineering, Stanford University"
   location         : "Palo Alto, CA"
-  employer         : "Stanford University"
+  employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=JR-kgQkAAAAJ&hl=en"
   email            : "smdalton@stanford.edu"
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/sean-m-dalton/"
   orcid            : 
   pinterest        :
   soundcloud       :
