--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sean Dalton"
-  avatar           : "profile.png"
+  avatar           : "cropped headshot.jpg"
   bio              : "Ph.D. student, Mechanical Engineering, Stanford University"
   location         : "Palo Alto, CA"
   employer         : 
